pretend/tests/builds/receivers.stderr
error: Failed to generate pretend implementation
 --> $DIR/receivers.rs:6:7
  |
6 | trait Test {
  |       ^^^^

error: Method must take `&self` as receiver
 --> $DIR/receivers.rs:8:5
  |
8 |     async fn test_1() -> Result<()>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Method must take `&self` as receiver
  --> $DIR/receivers.rs:10:21
   |
10 |     async fn test_2(self) -> Result<()>;
   |                     ^^^^

error: Method must take `&self` as receiver
  --> $DIR/receivers.rs:12:21
   |
12 |     async fn test_3(&mut self) -> Result<()>;
   |                     ^^^^^^^^^

error: Method must take `&self` as receiver
  --> $DIR/receivers.rs:14:5
   |
14 |     async fn test_4(input: i32) -> Result<()>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
